# gitproject1

./: .gitignore  db.sqlite3  inicio.html  pyproject.toml  requirements.txt
.github/workflows/: pull_request.yml
core/: settings.py
